--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style/index.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
+
     <title>Document</title>
   </head>
   <body>
     <div class="container todo_card">
       <div class="card_header">
-        <h2>vazifalarim</h2>
+        <h2>Vazifalarim</h2>
         <h4 class="todo_count">vazifalarim soni: <span></span></h4>
       </div>
       <div class="card_body">
@@ -18,7 +23,7 @@
 
           <select class="form_select">
             <option value="easy">oson</option>
-            <option value="medium">ortacha</option>
+            <option value="medium">o'rtacha</option>
             <option value="high">muhim</option>
           </select>
 
@@ -26,15 +31,10 @@
         </form>
       </div>
 
-      <ul class="list_group"> 
-        <li class="list_group_item">
-          <!-- <span>tedjfbejhst</span> -->
-          <!-- <button class="btn_delet">O'chirish</button> -->
-        </li>
+      <ul class="list_group">
+        <li class="list_group_item"></li>
       </ul>
-      <div class="card_footer">
-        <!-- <a href="#" class="btn_storage">Saqlash</a> -->
-      </div>
+      <div class="card_footer"></div>
 
       <div class="cards_categoriya">
         <!-- ////////////////////////////////////////////////////////// -->
